<resources>
    <string name="app_name">NgaiFa&lt;涯話&gt;</string>
    <string name="app_start_title">NgaiFa&lt;涯話&gt;</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">NgaiFa&lt;涯話&gt;設定</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+-=|&quot;、，。：；？！「」</string>
    <string name="word_ending_sentence">.:!?\n([*&amp;@{/&lt;&gt;&quot;。：？！「</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_taigi">Hakka (TW)</string>
    <string name="spacekey_text"> </string>

    <string name="activity_start_step_one">頭一步：</string>
    <string name="activity_start_step_one_desc">Tī系統設定內底ê『語言與輸入設定』，kā「PhahTaigi 台語輸入法」切做ē-sái使用。</string>
    <string name="activity_start_step_one_button">Kā輸入法開--起-來</string>
    <string name="activity_start_step_two">第二步：</string>
    <string name="activity_start_step_two_desc">Tī切換輸入法ê所在，kéng「PhahTaigi 台語輸入法」。</string>
    <string name="activity_start_step_two_button">選PhahTaigi 台語輸入法</string>
    <string name="activity_start_step_three">第三步：</string>
    <string name="activity_start_step_three_desc">去ē-sái phah字ê所在開始phah字，輸入法就ē出現！</string>
    <string name="activity_start_more_setting_button">其他設定</string>
    <string name="activity_start_feedback_button">問題kap建議</string>
    <string name="activity_start_button_finish">完成！</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">設定</string>

    <string name="about_version_item_text">版本</string>
    <string name="about_feedback_card_title_text">問題 kap 建議</string>
    <string name="about_facebook_group_item_text">面冊 ê 社團</string>
    <string name="about_facebook_group_url">https://www.facebook.com/groups/PhahTaigiApp/</string>
    <string name="about_author_card_title_text">作者</string>
    <string name="about_author_item_text">Hê-bí</string>
    <string name="about_author_item_subtext">Táⁿ-káu, Tâi-oân</string>
    <string name="about_email_me_item_text">寫phoe建議</string>
    <string name="about_feedback_email">ngoohebi+phahtaigi@gmail.com</string>
    <string name="about_email_me_mail_title">....</string>

    <string name="vibration">振動</string>
    <string name="vibration_summary">輸入時是否振動</string>
    <string name="dialect">方言</string>
    <string name="dialect_title">方言別</string>
    <string name="system">白話字/教育部羅馬字</string>
    <string name="system_title">白話字/教育部羅馬字</string>




</resources>
